--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"electron": "^6.0.7"
 	},
 	"dependencies": {
-		"cytoscape": "^3.10.0"
+		"cytoscape": "^3.10.0",
+		"cytoscape-klay": "^3.1.2"
 	}
 }
